post imgs gap fixed

--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -52,3 +52,13 @@
 .posted-time {
   font-size: 10px;
 }
+
+.post-imgs {
+  width: 80px;
+  height: 80px;
+}
+.post-imgs img {
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+}
